--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Nico WMC Webpage</title>
-    <meta name="description" content="My first HTML Demo Webpage">
-    <meta name="keywords" content="HTML CSS Javascript JS Website Webpage First">
+    <title>MasterWoodie Webpage</title>
+    <meta name="description" content="My School Website">
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
     <script src="js/GENERAL.js" type="module" defer></script>
 </head>
 <body>
     <header>
-        <h1>Nico's WMC Webpage</h1>
+        <h1>MasterWoodie Webpage</h1>
         <br>
     </header>
 
@@ -20,11 +19,12 @@
         <br>
         <br>
         <br>
-        <p id="welcome">&#183; Welcome to this page&#128075; &#183;
-            <br>&#183; This is my first website and it is self-made with html, CSS and vanilla JS &#128512; &#183;
-            <br>&#183; It was made for school&#127979; &#183;
-            <br>&#183; It is not guaranteed to be a beautiful website &#183;
-            <br>&#183; Now stop reading this and instead look at the rest of the website &#183;</p>
+        <p id="welcome">
+            Hi!<br>
+            this page was created for school, but I haved added a bunch more stuff to it :)<br>
+            You can play games, ignore the OtherStuff tab,<br>
+            and get completely confused with the Esoteric programming languages I added ;)
+        </p>
     </div>
 </body>
 </html>
