--- a/shortOLang.html
+++ b/shortOLang.html
@@ -26,7 +26,7 @@
 
             <div id="file-upload">
                 <p for="code-file">Upload Code</p>
-                <input type="file" id="code-file" accept=".shoo">
+                <input type="file" id="code-file" accept=".sho">
             </div>
         </div>
 
