--- a/shortOLang.html
+++ b/shortOLang.html
@@ -37,7 +37,8 @@
     </form>
 
     <div id="info">
-        <a href="https://esolangs.org/wiki/ShortO">ShortO entry in Esolang Wiki</a>
+        <a href="https://esolangs.org/wiki/ShortO">ShortO entry in Esolang Wiki</a><br><br>
+        <p></p>
     </div>
 
 </body>
