--- a/shortOLang.html
+++ b/shortOLang.html
@@ -37,8 +37,7 @@
     </form>
 
     <div id="info">
-        <a href="https://esolangs.org/wiki/ShortO">ShortO entry in Esolang Wiki</a><br><br>
-        <p></p>
+        <a href="https://esolangs.org/wiki/ShortO">ShortO entry in Esolang Wiki</a>
     </div>
 
 </body>
