updated old code

--- a/goofHotel.html
+++ b/goofHotel.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservation GoofHotel</title>
+    <title>HotelReservation | Woodpage</title>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
     <script defer type="module" src="js/GENERAL.js"></script>
     <script defer type="module" src="js/goofHotel.js"></script>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/GENERAL.css" type="text/css">
 </head>
 <body>
     
