--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/GENERAL.css" type="text/css">
     <title>MasterWoodie Webpage</title>
     <meta name="description" content="My School Website">
     <meta name="viewport" content="width=device-width">
