--- a/leapAdventure.html
+++ b/leapAdventure.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/GENERAL.css" type="text/css">
     <link rel="stylesheet" href="css/leapAdventure.css" type="text/css">
-    <title>TheJump on Woodpage</title>
+    <title>LeapAdventure | Woodpage</title>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
     <script src="https://kit.fontawesome.com/d4cb0ebe93.js" crossorigin="anonymous"></script>
     <script src="js/GENERAL.js" type="module" defer></script>
     <script src="js/leapAdventure.js" type="module" defer></script>
 </head>
 <body>
-    <br><br><br>
     <div id="game">
         <div id="loading-screen"></div>
         <div id="header">
@@ -77,7 +76,7 @@
             <p id="high-score">High Score:<br><span id="high-score-value">0</span></p>
             <button id="button-play">Play</button>
             <div id="game-mode">
-                <label for="GameMode" id="game-mode-text">Game Mode:</label>
+                <label for="game-mode-input" id="game-mode-text">Game Mode:</label>
                 <input type="list" name="GameMode" id="game-mode-input" data-list-items="test, master" value="test">
             </div>
         </div>
