--- a/todoList.html
+++ b/todoList.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Todo List on WoodMaster</title>
+    <link rel="stylesheet" href="css/GENERAL.css" type="text/css">
+    <link rel="stylesheet" href="css/dodoList.css" type="text/css">
+    <title>Todo List | WoodMaster</title>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
     <script src="https://kit.fontawesome.com/d4cb0ebe93.js" crossorigin="anonymous"></script>
     <script src="js/GENERAL.js" type="module" defer></script>
     <script src="js/dodoList.js" type="module" defer></script>
 </head>
 <body>
-    
     <header>
         <h1>Todo List</h1>
         <br>
