--- a/weirdJS.html
+++ b/weirdJS.html
@@ -7,9 +7,9 @@
     <title>Weird Code | WoodGames</title>
     <script src="js/weirdJS.js" defer></script>
     <script src="js/GENERAL.js" type="module" defer></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/GENERAL.css">
     <link rel="stylesheet" href="css/interpreter.css">
-    <link rel="icon" href="IMG/WoodGameLogo.png" type="image/x-icon">
+    <link rel="icon" href="IMG/Favicon.png" type="image/x-icon">
 </head>
 <body>
     <h1>Weird JS</h1>
