--- a/weirdLang.html
+++ b/weirdLang.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brainfuck | Wood Games</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/GENERAL.css">
     <link rel="stylesheet" href="css/interpreter.css">
-    <link rel="icon" href="IMG/WoodGameLogo.png" type="image/x-icon">
+    <link rel="icon" href="IMG/Favicon.png" type="image/x-icon">
     <script src="js/weirdLang.js" type="module" defer></script>
     <script src="js/GENERAL.js" type="module" defer></script>
 </head>
