fixed warnings and errors

--- a/goofHotel.html
+++ b/goofHotel.html
@@ -51,6 +51,7 @@
     
             <label for="room-type"><b>Room Type: </b></label>
             <br>
+            <!--suppress HtmlWrongAttributeValue -->
             <input type="list" name="RoomType" id="room-type" data-list-items="Small, Normal, Business Room, Suite, VIP Room, King Suite" required value="Normal">
             <br>
             <br>
