--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <p id="welcome">
             Hi!<br>
-            this page was created for school, but I haved added a bunch more stuff to it :)<br>
+            this page was created for school, but I have added a bunch more stuff to it :)<br>
             You can play games, ignore the OtherStuff tab,<br>
             and get completely confused with the Esoteric programming languages I added ;)
         </p>
