--- a/leapAdventure.html
+++ b/leapAdventure.html
@@ -28,7 +28,8 @@
             <div id="menu-tutorial">
                 <button id="button-menu-tutorial">How To</button>
                 <ul id="menu-tutorial-text" class="switch-list" data-switch-idx=0>
-                    <p class="switch-list-counter"></p>
+                    <!--suppress HtmlUnknownTag -->
+                    <div class="switch-list-counter"></div>
                     <li>
                         <img src="IMG/leapAdventure/Tutorial_Control.png" alt="Movement">
                         <p>move left and right by using <br> 'a' & 'd' or the arrow keys<br>You will jump automatically</p>
@@ -77,6 +78,7 @@
             <button id="button-play">Play</button>
             <div id="game-mode">
                 <label for="game-mode-input" id="game-mode-text">Game Mode:</label>
+                <!--suppress HtmlWrongAttributeValue -->
                 <input type="list" name="GameMode" id="game-mode-input" data-list-items="test, master" value="test">
             </div>
         </div>
