--- a/standardChess.html
+++ b/standardChess.html
@@ -25,7 +25,7 @@
             <button type="button" id="clear">Clear Console</button>
 
             <div id="file-upload">
-                <p for="code-file">Upload Code</p>
+                <p>Upload Code</p>
                 <input type="file" id="code-file" accept=".stdchess">
             </div>
         </div>
