added info box to tetris

--- a/gooftris.html
+++ b/gooftris.html
@@ -18,6 +18,15 @@
         <div id="start" class="main-load standardContentBox">
             <p>Tetris</p>
             <button>Start</button>
+            <ul id="info">
+                <li>Press [C] to hold shape</li>
+                <li>Press [ESC] to pause</li>
+                <li>Press [UP ARROW] or [W] to rotate</li>
+                <li>Press [LEFT ARROW] or [A] to move left</li>
+                <li>Press [RIGHT ARROW] or [D] to move right</li>
+                <li>Press [DOWN ARROW] or [S] to move down faster</li>
+                <li>Press [SPACE] to instantly place shape</li>
+            </ul>
         </div>
 
         <p id="hold-text">Hold:</p>
