--- a/standardChess.html
+++ b/standardChess.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Short O | Wood Games</title>
+    <title>Short O | Woodpage</title>
     <link rel="stylesheet" href="css/GENERAL.css">
     <link rel="stylesheet" href="css/interpreter.css">
     <link rel="icon" href="IMG/Favicon.png" type="image/x-icon">
