added physic Balls

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <div>
         <br>
         <br>
-        <br>
-        <p id="welcome">
+            <p class="text-box">
             Hi!<br>
             this page was created for school, but I have added a bunch more stuff to it :)<br>
             You can play games, ignore the OtherStuff tab,<br>
