--- a/todoList.html
+++ b/todoList.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/dodoList.css" type="text/css">
     <title>Todo List | Woodpage</title>
     <link rel="icon" type="image/x-icon" href="IMG/Favicon.png">
-    <script src="https://kit.fontawesome.com/d4cb0ebe93.js" crossorigin="anonymous"></script>
+    <!--https://kit.fontawesome.com/d4cb0ebe93.js -- crossorigin="anonymous"-->
+    <script src="js/external/fontawesome.js" ></script>
     <script src="js/GENERAL.js" type="module" defer></script>
     <script src="js/dodoList.js" type="module" defer></script>
 </head>
