updated physicBalls to allow for customization and fix bugs

--- a/goofHotel.html
+++ b/goofHotel.html
@@ -18,7 +18,7 @@
     
     <section>
         <h2>Information</h2>
-        <form>
+        <form class="specialForm">
             <label for="first-name"><b>First Name:</b></label>
             <br>
             <input type="text" name="FirstName" id="first-name" required placeholder="e.g. John">
