--- a/todoList.html
+++ b/todoList.html
@@ -18,7 +18,7 @@
         <br>
     </header>
     
-    <form>
+    <form class="specialForm">
         <button id="open-add-task" type="button"></button>
         <div id="add-task-container">
             <label for="task-name"><b>Name:</b></label>
