updated tetris to have levels, better scoring systems and tile speed increasing each level

--- a/gooftris.html
+++ b/gooftris.html
@@ -38,6 +38,7 @@
         <div id="displays">
             <p id="high-score" class="centered-text main-load standardContentBox">High Score:<br>0</p>
             <p id="time" class="centered-text standardContentBox main-load">Time:<br>0:00</p>
+            <p id="level" class="centered-text standardContentBox main-load">Level:<br>0</p>
             <p id="points" class="centered-text standardContentBox main-load">Points:<br>0</p>
         </div>
 
